a porra de um commit

--- a/Teste.ipynb
+++ b/Teste.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,6 +46,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>GDP per capita (current US$)</th>\n",
+       "      <th>GDP per capita growth (annual %)</th>\n",
        "      <th>Agriculture, forestry, and fishing, value added (% of GDP)</th>\n",
        "      <th>Food production index (2004-2006 = 100)</th>\n",
        "      <th>Arable land (hectares per person)</th>\n",
@@ -54,7 +55,6 @@
        "      <th>Access to electricity (% of population)</th>\n",
        "      <th>CO2 emissions (metric tons per capita)</th>\n",
        "      <th>Urban population</th>\n",
-       "      <th>Population, total</th>\n",
        "      <th>...</th>\n",
        "      <th>Lending interest rate (%)</th>\n",
        "      <th>Real interest rate (%)</th>\n",
@@ -71,18 +71,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 57 columns</p>\n",
+       "<p>0 rows × 58 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [GDP per capita (current US$), Agriculture, forestry, and fishing, value added (% of GDP), Food production index (2004-2006 = 100), Arable land (hectares per person), Surface area (sq. km), Rural population (% of total population), Access to electricity (% of population), CO2 emissions (metric tons per capita), Urban population, Population, total, Electric power consumption (kWh per capita), Population growth (annual %), Urban population (% of total), High-technology exports (current US$), Research and development expenditure (% of GDP), Merchandise trade (% of GDP), Ores and metals exports (% of merchandise exports), International tourism, expenditures (% of total imports), International tourism, receipts (% of total exports), Exports of goods and services (% of GDP), Merchandise exports (current US$), Imports of goods and services (% of GDP), Merchandise imports (current US$), Net barter terms of trade index (2000 = 100), Current account balance (BoP, current US$), Use of IMF credit (DOD, current US$), External debt stocks, total (DOD, current US$), Foreign direct investment, net inflows (BoP, current US$), IBRD loans and IDA credits (DOD, current US$), Total reserves (includes gold, current US$), Adjusted net savings, including particulate emission damage (% of GNI), Gross savings (% of GDP), Gross capital formation (% of GDP), Expense (% of GDP), Inflation, consumer prices (annual %), Inflation, GDP deflator (annual %), Government expenditure on education, total (% of GDP), Government expenditure per student, primary (% of GDP per capita), Government expenditure per student, secondary (% of GDP per capita), Government expenditure per student, tertiary (% of GDP per capita), Trained teachers in primary education (% of total teachers), Literacy rate, adult total (% of people ages 15 and above), Primary completion rate, total (% of relevant age group), Total natural resources rents (% of GDP), Unemployment, total (% of total labor force) (modeled ILO estimate), Market capitalization of listed domestic companies (current US$), Domestic credit provided by financial sector (% of GDP), Lending interest rate (%), Real interest rate (%), Stocks traded, total value (% of GDP), Listed domestic companies, total, Domestic credit to private sector (% of GDP), Bank capital to assets ratio (%), Official exchange rate (LCU per US$, period average), Time required to start a business (days), New businesses registered (number), Total tax rate (% of commercial profits)]\n",
+       "Columns: [GDP per capita (current US$), GDP per capita growth (annual %), Agriculture, forestry, and fishing, value added (% of GDP), Food production index (2004-2006 = 100), Arable land (hectares per person), Surface area (sq. km), Rural population (% of total population), Access to electricity (% of population), CO2 emissions (metric tons per capita), Urban population, Population, total, Electric power consumption (kWh per capita), Population growth (annual %), Urban population (% of total), High-technology exports (current US$), Research and development expenditure (% of GDP), Merchandise trade (% of GDP), Ores and metals exports (% of merchandise exports), International tourism, expenditures (% of total imports), International tourism, receipts (% of total exports), Exports of goods and services (% of GDP), Merchandise exports (current US$), Imports of goods and services (% of GDP), Merchandise imports (current US$), Net barter terms of trade index (2000 = 100), Current account balance (BoP, current US$), Use of IMF credit (DOD, current US$), External debt stocks, total (DOD, current US$), Foreign direct investment, net inflows (BoP, current US$), IBRD loans and IDA credits (DOD, current US$), Total reserves (includes gold, current US$), Adjusted net savings, including particulate emission damage (% of GNI), Gross savings (% of GDP), Gross capital formation (% of GDP), Expense (% of GDP), Inflation, consumer prices (annual %), Inflation, GDP deflator (annual %), Government expenditure on education, total (% of GDP), Government expenditure per student, primary (% of GDP per capita), Government expenditure per student, secondary (% of GDP per capita), Government expenditure per student, tertiary (% of GDP per capita), Trained teachers in primary education (% of total teachers), Literacy rate, adult total (% of people ages 15 and above), Primary completion rate, total (% of relevant age group), Total natural resources rents (% of GDP), Unemployment, total (% of total labor force) (modeled ILO estimate), Market capitalization of listed domestic companies (current US$), Domestic credit provided by financial sector (% of GDP), Lending interest rate (%), Real interest rate (%), Stocks traded, total value (% of GDP), Listed domestic companies, total, Domestic credit to private sector (% of GDP), Bank capital to assets ratio (%), Official exchange rate (LCU per US$, period average), Time required to start a business (days), New businesses registered (number), Total tax rate (% of commercial profits)]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 57 columns]"
+       "[0 rows x 58 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
