--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,27 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn import linear_model, preprocessing\n",
-    "import matplotlib.pyplot as plt\n",
     "from collections import defaultdict\n",
-    "from data import data"
+    "from data import data\n",
+    "from plots import scatter\n",
+    "from analyze import analyze"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from analyze import analyze\n",
-    "from plots import scatter, trend, lmh, trend_years, comparison_filter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +37,7 @@
     "    for i,k in years:\n",
     "        try:\n",
     "            ind = scatter(data,[i,k],[\"GDP per capita (current US$)\", indice], False)\n",
-    "            if ind[0] >= 0.5 and ind[2] >= 50:\n",
+    "            if ind[0] >= 0.45 and ind[2] >= 75:\n",
     "                saida[indice].append(((i,k), (ind[0], ind[2])))\n",
     "        except:\n",
     "            pass"
