--- a/Teste.ipynb
+++ b/Teste.ipynb
@@ -3069,12 +3069,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter([1,2,3,None], [None,2,3,4])\n",
-    "plt.show()"
+    "sublog = lambda x: np.log(x) if x > 0 else -np.log(abs(x)) if x < 0 else None\n",
+    "log = lambda x: np.array([sublog(i) for i in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subcube = lambda x: x**(1/3) if x >= 0 else -abs(x)**(1/3)\n",
+    "cube = lambda x: np.array([subcube(i) for i in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3., 4., 5.])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cube(a**3)"
    ]
   },
   {
