reparando scatter.py

--- a/New/Teste.ipynb
+++ b/New/Teste.ipynb
@@ -26,17 +26,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kalysthos/100.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
       "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
+       "(0.015997091503086147, -0.06872437962443693, 193, 'x - y')"
       ]
      },
      "execution_count": 2,
@@ -45,18 +40,23 @@
     }
    ],
    "source": [
-    "scatter(data, [2017,2017], ['GDP per capita (current US$)', 'Economic freedom'] , True)"
+    "scatter(data, [2014,2005], ['GDP per capita (current US$)', 'GDP growth (annual %)'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~kalysthos/126.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
       "text/plain": [
-       "(0.5319754632223068, 0.3102519629976862, 166, 'log(x) - y')"
+       "<plotly.tools.PlotlyDisplay object>"
       ]
      },
      "execution_count": 3,
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "scatter(data, [2017,2014], ['GDP per capita (current US$)', 'Economic freedom'])"
+    "scatter(data, [2014,2005], ['GDP per capita (current US$)', 'GDP growth (annual %)'], True)"
    ]
   },
   {
@@ -73,7 +73,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[(norm(np.log(x)), \"log(x)\") if x.min() > 0 else (norm(cuberoot(x)), \"x**(1/3)\"), (norm(x), \"x\")]"
+   ]
   },
   {
    "cell_type": "code",
@@ -81,7 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = scatter(data, [2017,2014], ['GDP per capita (current US$)', 'Economic freedom'])"
+    "a = 1\n",
+    "[1 if a == 2 else 2, 3]"
    ]
   },
   {
@@ -132,163 +135,6 @@
    "source": [
     "trend_years(data, 'Economic freedom', 'World', [2000, 2017])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "names = list(set(pd.read_csv(\"WBData.csv\")['Series Name']))\n",
-    "names.remove('GDP per capita (current US$)')\n",
-    "years = data.columns\n",
-    "years = list((int(i),int(k)) for i in years for k in years)\n",
-    "from collections import defaultdict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saida = defaultdict(list)\n",
-    "for ind in names[170:171]:\n",
-    "    for i,k in years:\n",
-    "        try:\n",
-    "            saida[k].append(scatter(data, [i,k], ['GDP per capita (current US$)', ind])[0])\n",
-    "        except:\n",
-    "            saida[k].append(np.nan)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saida"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(saida).dropna(1)\n",
-    "df.index = df.index + 1968"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"WBData.csv\")\n",
-    "a = data.pivot(index='Country Name', columns='Series Name', values='2016')\n",
-    "corr = a.corr()\n",
-    "b = corr.loc[['GDP per capita (current US$)']]\n",
-    "b[b > 0.5].dropna(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df = data.loc[(names, 'World'), data.columns]\n",
-    "pd.DataFrame(data.loc[(names), '2016'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(saida).dropna(0, how='all').dropna(1, how='all')\n",
-    "df.index = df.index + 1968\n",
-    "df.style.background_gradient(low=0, high=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "df.style.background_gradient?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df.style.background_gradient(low=0, high=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(10,10))\n",
-    "cax = ax.matshow(df)\n",
-    "fig.colorbar(cax)\n",
-    "ax.set_xticklabels([df.columns[0]] + list(df.columns), rotation=90)\n",
-    "ax.set_yticklabels(df.index)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax.set_yticklabels?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(figsize=(10,10))\n",
-    "ax.imshow(df, interpolation='none', extent=[80,120,32,0])\n",
-    "ax.set_aspect(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
